--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name = "viewport" content = "initial-scale = 1.0">
+  <meta name = "viewport" content = "initial-scale = 2.3, user-scalable = no">
+
   <title>Document</title>
   <style>
     html {
